<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asoftwaresolution.formulariocoursera.MainActivity"
    android:paddingTop="@dimen/activity_vertical"
    android:paddingBottom="@dimen/activity_vertical"
    android:paddingLeft="@dimen/activity_horizontal"
    android:paddingRight="@dimen/activity_horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/con_title"
        android:id="@+id/con_title"
        android:inputType="text"
        android:textStyle="bold"
        android:textSize="@dimen/activity_con_title"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_username"
        android:id="@+id/con_username"
        android:inputType="text"
        android:layout_below="@+id/con_title"
        android:textStyle="bold"
        android:textSize="@dimen/activity_con_data"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_borndate"
        android:id="@+id/con_borndate"
        android:inputType="text"
        android:layout_below="@+id/con_username"
        android:textStyle="bold"
        android:textSize="@dimen/activity_con_data"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_phone"
        android:id="@+id/con_phone"
        android:inputType="text"
        android:layout_below="@+id/con_borndate"
        android:textStyle="bold"
        android:textSize="@dimen/activity_con_data"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_email"
        android:id="@+id/con_email"
        android:inputType="text"
        android:layout_below="@+id/con_phone"
        android:textStyle="bold"
        android:textSize="@dimen/activity_con_data"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/form_description"
        android:id="@+id/con_description"
        android:inputType="textMultiLine"
        android:textStyle="bold"
        android:textSize="@dimen/activity_con_data"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical"
        android:layout_below="@+id/con_email"
        android:layout_above="@+id/btnSiguiente"/>

    <Button
        android:id="@+id/btnEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/con_btn"
        android:theme="@style/ButtonsStyle"
        android:textStyle="bold"/>

</RelativeLayout>
