<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="asoftwaresolution.formulariocoursera.MainActivity"
    android:paddingTop="@dimen/activity_vertical"
    android:paddingBottom="@dimen/activity_vertical"
    android:paddingLeft="@dimen/activity_horizontal"
    android:paddingRight="@dimen/activity_horizontal">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutUser">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_username"
            android:id="@+id/form_username"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutDate"
        android:layout_below="@+id/textInputLayoutUser">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_borndate"
            android:id="@+id/form_borndate"
            android:inputType="date"
            android:clickable="true"
            android:focusable="false"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutPhone"
        android:layout_below="@+id/textInputLayoutDate">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_phone"
            android:id="@+id/form_phone"
            android:inputType="phone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textInputLayoutEmail"
        android:layout_below="@+id/textInputLayoutPhone">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_email"
            android:id="@+id/form_email"
            android:inputType="textEmailAddress"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/textInputLayoutDescription"
        android:layout_below="@+id/textInputLayoutEmail"
        android:layout_above="@+id/btnSiguiente">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_description"
            android:id="@+id/form_description"
            android:inputType="textMultiLine"/>

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/form_btn"
        android:theme="@style/ButtonsStyle"
        android:textStyle="bold"/>

</RelativeLayout>
